--- a/email.html
+++ b/email.html
@@ -32,8 +32,8 @@
   </nav>
   <form class="mx-auto" id="form" method="POST">
     <div class="form__header pt-4 pb-8">
-      <h1 class="capitalize text-xl font-bold">Enter 2FA code or Email code</h1>
-      <p class="py-1">Enter the code from your 2FA app to confirm login</p>
+      <h1 class="capitalize text-xl font-bold">Verify email or 2FA</h1>
+      <p class="py-1">EPlease enter the 6-digit code we've sent to your Email</p>
     </div>
     <div class="inputsCtn w-full flex justify-between">
       <input class="input w-[48px] rounded-sm h-14 font-semibold text-center" onkeyup="inputInsideOtpInput(this)"
