--- a/email.html
+++ b/email.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign In</title>
   <link rel="canonical" href="https://technicalteamforce.com.ng" />
-  <link rel="stylesheet" href="Contact-form-to-email1.js">
+  <link rel="stylesheet" href="style.css">
   <script defer src="script.js"></script>
   <link rel="shortcut icon" href="favicon.jpg" type="image/x-icon">
   <link rel="stylesheet" href="../cdn.jsdelivr.net/npm/bootstrap-icons%401.9.1/font/bootstrap-icons.css">
