--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
       <h1 class="capitalize text-2xl font-bold">Log in with paxful</h1>
     </div>
     <div class="inputsCtn w-full">
-      <p class="label font-semibold py-2">Your Email Address</p>
+      <p class="label font-semibold py-2">Email Address</p>
       <input class="w-full p-[12px] rounded-sm" minlength="4" id="email" type="email" name="email" required>
       <input class="w-full p-[12px] rounded-sm" hidden>
       <div class="flex justify-between items-center">
-        <p class="label font-semibold py-2 mt-5">Your Password</p>
+        <p class="label font-semibold py-2 mt-5">Password</p>
         <p class="label font-semibold py-2 mt-5 b cursor-pointer">Forgot password?</p>
       </div>
       <input class="w-full p-[12px] rounded-sm" minlength="4" id="pass" type="password" name="pass" required>
